--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
+    "fs-extra": "^11.3.2",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
+    "multer": "^2.0.2",
+    "uuid": "^13.0.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
