--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
+    "expo": "^54.0.9",
+    "react-native": "^0.81.4",
     "react-native-maps": "^1.20.1"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.13",
+    "typescript": "^5.9.2"
   }
 }
